[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "p1"
path = "src/main.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[[bin]]
name = "simple"
path = "src/simple.rs"

[dependencies]
